config/kubernetes/vault/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-network-policy
  namespace: lotabots
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/part-of: lotabots
    ports:
    - protocol: TCP
      port: 8200
    - protocol: TCP
      port: 8201
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/part-of: lotabots
    ports:
    - protocol: TCP
      port: 8200
    - protocol: TCP
      port: 8201
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-injector-network-policy
  namespace: lotabots
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault-agent-injector
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: vault
    ports:
    - protocol: TCP
      port: 8200
